# rbfopt

./: .gitattributes  .readthedocs.yaml  AUTHORS  CHANGELOG  LICENSE  MANIFEST.in  MOpossum.py  README  README.rst  UpgradeLog.htm  VERSION  coin-or_rbfopt.pyproj  coin-or_rbfopt.sln  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.coin-or/: projDesc.xml
doc/: Makefile  black_box.rst  conf.py  index.rst  rbfopt.rst  rbfopt_black_box_example.rst  rbfopt_cl_interface.rst  rbfopt_model_selection.rst  rbfopt_refinement.rst  rbfopt_settings.rst  test_functions.rst  test_rbfopt.rst
src/: black_box.py  rbfopt.py  rbfopt_algorithm.py  rbfopt_aux_problems.py  rbfopt_black_box.py  rbfopt_black_box_example.py  rbfopt_bumpiness.py  rbfopt_cl_interface.py  rbfopt_config.py  rbfopt_degree0_models.py  rbfopt_degree1_models.py  rbfopt_local_search.py  rbfopt_model_selection.py  rbfopt_refinement.py  rbfopt_settings.py  rbfopt_utils.py  setup.py  test_cross_validation.py  test_functions.py  test_rbfopt.py  test_rbfopt_local_search.py
src/cython_rbfopt/: rbfopt_aux_problems.pyx  rbfopt_utils.pyx
src/rbfopt/: __init__.py  rbfopt_algorithm.py  rbfopt_aux_problems.py  rbfopt_black_box.py  rbfopt_cl_interface.py  rbfopt_config.py  rbfopt_degree0_models.py  rbfopt_degree1_models.py  rbfopt_degreem1_models.py  (+6 more)
tests/: context.py  rbfopt_test_interface.py  slow_test_rbfopt_algorithm.py  test_functions.py  test_rbfopt.py  test_rbfopt_algorithm.py  test_rbfopt_algorithm_slow.py  test_rbfopt_aux_problems.py  test_rbfopt_bumpiness.py  test_rbfopt_degree0_models.py  test_rbfopt_degree1_models.py  test_rbfopt_degreem1_models.py  test_rbfopt_env.py  test_rbfopt_model_selection.py  test_rbfopt_mwe.py  test_rbfopt_refinement.py  test_rbfopt_settings.py  test_rbfopt_test_functions.py  test_rbfopt_utils.py
(+15 files in other folders)
