[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "rbfopt"
dynamic = ["version"]
description = "RBFOpt is a library for black-box optimization using derivative-free optimization tools."
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Giacomo Nannicini", email = "g.nannicini@usc.edu" }]
maintainers = [
  { name = "Giacomo Nannicini", email = "g.nannicini@usc.edu" },
]
classifiers=[
  'Development Status :: 5 - Production/Stable',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3',
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  'Topic :: Scientific/Engineering :: Mathematics'
]
dependencies = [
  "numpy >= 2.0.0",
  "scipy >= 1.13.0",
  "numpydoc >= 0.5",
  "pyomo >= 5.1.1"
]

[project.optional-dependencies]
test = ["mock >= 1.1.3", "pytest"]

[project.urls]
"Homepage" = "https://github.com/coin-or/rbfopt"
"Bug Reports" = "https://github.com/coin-or/rbfopt/issues"

[project.scripts]
rbfopt_cl_interface = "rbfopt.rbfopt_cl_interface:main"
rbfopt_test_interface = "rbfopt.rbfopt_test_interface:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.dynamic]
version = {attr = "rbfopt.__version__"}

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest>=7"]
commands = [["pytest"]]